tests/paczka1/fuzzy1/41034287.err
Error in line 17: eL7xgDYF A270 25,73
Error in line 26: aMl S341 -2,9
Error in line 29: iTpIeNgkYnS A646 87,7
Error in line 39: eZUMIIS A500 61,4
